fixed to 5 songs, random genre selection, removed visible prediction and opens first song

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -8,6 +8,7 @@ h1 {
 .box {
   display: grid;
   justify-content: center;
+  margin-bottom: 120px;
 }
 
 .emGen {
